# Ea-builder-

./: .gitignore  CONTRIBUTING.md  Copilot_Instructions.md  GOALS.md  INSTRUCTIONS.md  LICENSE  Master_Prompt.md  README.md  REQUIREMENTS.md  REQUIREMENTS_Goals.md  Requirements_and_Goals.md  Status.md  memory.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: .env.example
data/: baseline_model_results.json  collection_results.json  data_validation_report.json  efficient_neural_results.json  enhanced_baseline_results.json  generation_summary.json  neural_dataset_summary.json  stage_3_2_completion_report.json  stage_3_3_completion_report.json  stage_3_3_ensemble_results.json  stage_3_3_success_report.json
examples/: basic_usage.py
python/: pyproject.toml
python/notebooks/: formal_series_tutorial.ipynb  introduction.ipynb
python/src/: __init__.py
python/src/orchestration/: __init__.py
python/src/research/: __init__.py  god_index.py  idvbit.py  symbolic_math.py
python/tests/: test_basic.py  test_god_index.py  test_idvbit.py  test_symbolic_math.py
rust/: Cargo.toml
rust/crates/god_index/: Cargo.toml
rust/crates/god_index/src/: index_extraction.rs  lib.rs  problem_mapping.rs  verification.rs
rust/crates/idvbit_core/: Cargo.toml
rust/crates/idvbit_core/src/: decision_diagrams.rs  formal_series.rs  generating_functions.rs  idvbit.rs  lib.rs
rust/crates/tensor_net/: Cargo.toml
rust/crates/tensor_net/src/: contraction.rs  decomposition.rs  lib.rs  tensor_train.rs
rust/crates/vgpu_shim/: Cargo.toml
rust/crates/vgpu_shim/src/: cuda_shim.rs  lib.rs  opencl_shim.rs  vulkan_shim.rs  workload_mapping.rs
scripts/: run_notebooks_headless.py  run_tests.sh
src/: __init__.py  advanced_data_collector.py  advanced_ensemble_optimizer.py  advanced_neural_models.py  baseline_models.py  config.py  data_pipeline.py  data_simulator.py  data_validator.py  database.py  efficient_neural_models.py  enhanced_baseline_models.py  ensemble_methods.py  feature_engineering.py  final_ensemble_system.py  logger.py  neural_data_generator.py  simple_data_generator.py  simple_ensemble_demo.py  stage_3_2_summary.py  stage_3_3_success_report.py  technical_indicators.py
tests/: test_data_collection.py  test_stage2_validation.py  test_structure.py  test_technical_indicators.py
