[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forex-trading-bot"
version = "0.1.0"
description = "Autonomous Forex Trading Bot with AI and Risk Management"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Forex Trading Bot Team", email = "admin@forexbot.com"}
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "sqlalchemy>=2.0.0",
    "yfinance>=0.2.18",
    "torch>=2.0.0",
    "stable-baselines3>=2.0.0",
    "scikit-learn>=1.3.0",
    "backtrader>=1.9.78.123",
    "faiss-cpu>=1.7.4",
    "pydantic>=2.0.0",
    "structlog>=23.1.0",
    "pytest>=7.4.0"
]

[project.optional-dependencies]
dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.0.284",
    "pytest-cov>=4.1.0"
]

[project.scripts]
forex-bot = "src.main:main"
data-collector = "src.data_pipeline:main"
backtester = "src.backtesting.engine:main"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80"
]

[tool.ruff]
target-version = "py39"
line-length = 88
select = ["E", "W", "F", "I", "N", "B", "A", "C4", "UP", "SIM"]
ignore = ["E501", "B008", "B904"]