[tool.poetry]
name = "isvgpu-python"
version = "0.1.0"
description = "ISVGPU Python components for research and orchestration"
authors = ["ISVGPU Research Team"]
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
# Mathematical computation
sympy = "^1.12"
numpy = "^1.24"
scipy = "^1.11"
mpmath = "^1.3"

# Jupyter and research tools
jupyter = "^1.0"
notebook = "^7.0"
matplotlib = "^3.7"
plotly = "^5.15"
pandas = "^2.0"

# Machine learning and data science
scikit-learn = "^1.3"
torch = {version = "^2.0", optional = true}

# Serialization and data handling
msgpack = "^1.0"
h5py = "^3.9"
zarr = "^2.15"

# Development and testing
pytest = "^7.4"
pytest-cov = "^4.1"
black = "^23.0"
isort = "^5.12"
flake8 = "^6.0"

# Research and documentation
sphinx = "^7.0"
sphinx-rtd-theme = "^1.3"
nbsphinx = "^0.9"

[tool.poetry.group.dev.dependencies]
pytest-benchmark = "^4.0"
memory-profiler = "^0.61"
line-profiler = "^4.1"

[tool.poetry.extras]
torch = ["torch"]
full = ["torch"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"