[package]
name = "idvbit_core"
version = "0.1.0"
edition = "2021"
description = "Core IDVBit (Infinite-Dimensional Vector Bit) implementations"
license = "MIT"

[dependencies]
# Mathematical computation
rug = { workspace = true }
num-complex = { workspace = true }
num-traits = { workspace = true }

# Serialization
serde = { workspace = true }
bincode = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
log = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
env_logger = { workspace = true }